--- a/release/ui/main.html
+++ b/release/ui/main.html
@@ -25,7 +25,7 @@
     <!-- Uncomment the following to include cordova in your android project -->
     <!--<script src="http://jqmdesigner.appspot.com/platforms/android/cordova.js"></script>-->
     <!-- GK Loader use RequireJS to load module -->
-    <script src="https://terranout.mine.nu/require.js"></script>
+    <script src="/require.js"></script>
     <!--Plug in GK-->
     <script src="https://jqmdesigner.appspot.com/components/jquery.gk/jquery.gk.min.js"></script>
     <!-- Load GK components -->
